[package]
name = "imp_encode"
version = "0.1.0"
edition = "2021"
description = "A library containing several impractical(-ish) encoding methods."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.4", features = ["alloc"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["futhark"]
futhark = ["unicode-segmentation"]